# todo-list-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  todo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
completions/: README.md  todo-completion.bash  todo-completion.zsh
examples/: README.md  python_usage.py  shell_script_example.sh
src/todolist/: __init__.py  __main__.py  cli.py  colors.py  core.py
tests/: __init__.py  test_core.py
